[gd_scene load_steps=4 format=3 uid="uid://btmj17pu4i782"]

[ext_resource type="Script" path="res://Scripts/DropZone.gd" id="1_wdoau"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bdxp3"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.321569, 0.321569, 0.321569, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j5gaj"]

[node name="DropZone" type="Marker2D" groups=["DropZone"]]
z_index = -10
script = ExtResource("1_wdoau")
highlight_color = Color(0.0470588, 0.690196, 0, 1)
default_color = Color(0.0705882, 0.247059, 0.290196, 1)

[node name="ColorRect_old" type="ColorRect" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.0
offset_top = -55.0
offset_right = 43.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0, 0.243137, 0.243137, 1)

[node name="ColorRect" type="Panel" parent="."]
modulate = Color(0.427451, 0.427451, 0.427451, 1)
offset_left = -42.0
offset_top = -55.0
offset_right = 43.0
offset_bottom = 55.0
theme_override_styles/panel = SubResource("StyleBoxFlat_bdxp3")

[node name="DroppableArea" type="Area2D" parent="."]
visible = false

[node name="DroppableAreaShape" type="CollisionShape2D" parent="DroppableArea"]
shape = SubResource("RectangleShape2D_j5gaj")
